# GNC

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GNC.cbp  LICENSE.txt  MEKF_273.m  Makefile  README.md  a.out  cmake_install.cmake  compare_detumble_GNC.py  example_detumble.py  example_dynamics_kinematics.py  example_orbit_prop_detumble.py  example_pass_by_ref.py  magnetic_field  notCMakeCache.txt  pointer_t  requirements.txt  sample_cpp.cpp  sample_cpp.h  spacecraft_properties_calculation.py  t_TRIAD.py  t_cpp.py  test_C.c  test_TRIAD.py
Andrew's Code/: monte_carlo.jl
C_C++_test/: a.out  cpp_test  foo.cpp  foo.h  main.c  main2  run_test  test_C.c  test_CPP.cpp  test_CPP.h
MATLAB_Coder_Testing/: Notes_from_tests.txt
MEKF/: MEKF.py
MEKF Code Template/: measurement.m  mekf.m  prediction.m  test.m  triad.m
PyCubed_orbprop_validation/: Orsted_25635.sa  Orsted_25635.sa3  PyCubed_orbprop_validation STK ScenarioWB.wsp  PyCubed_orbprop_validation STK ScenarioWB.wsptb  PyCubed_orbprop_validation.sc  PyCubed_orbprop_validation.sc3  PyCubed_orbprop_validationTimelinePrefs.xml
TRIAD/: __init__.py  deterministic_ad.h  deterministic_ad.py
c++ euler get started/: eigenbasics.cpp  euler_getstarted.txt
cmake_build_debug/: CMakeCache.txt  GNC.cbp  Makefile  cmake_install.cmake  frame_conversions_cpp.cp37-win32.ilk  frame_conversions_cpp.cp37-win32.pyd  frame_conversions_cpp.exp  frame_conversions_cpp.lib  sun_utils_cpp.cp37-win32.ilk  sun_utils_cpp.cp37-win32.pyd  sun_utils_cpp.exp  sun_utils_cpp.lib  time_functions_cpp.cp37-win32.ilk  time_functions_cpp.cp37-win32.pyd  time_functions_cpp.exp  time_functions_cpp.lib  triad_cpp.cp37-win32.pyd  triad_cpp.exp  triad_cpp.lib
detumble/: __init__.py  detumble_algorithms.py
euler/: Euler.py  __init__.py
magnetic_field_models/cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cpp  magnetic_field  magnetic_field.cpp  magnetic_field.h
magnetic_field_models/cpp/cmake_build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  cpp.cbp
orbit_propagation/: __init__.py  orbit.py
quaternion_julia_code/: quanternion_tricks.jl
trajectory_optimization/: .gitignore  TODO.txt
trajopt/: ilqr  (+4 more)
(+692 files in other folders)
